--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -166,7 +167,7 @@
                                 </div>
                             </div><!-- / progress -->
 
-                            <h6 class="progress-title">HTML5/CSS3</h6>
+                            <h6 class="progress-title">HTML</h6>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-primary animated fadeInLeft" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
                                 </div>
@@ -266,7 +267,7 @@
                         
                         <h5>Mini Project</h5>
                         <p>Faculty Guide: Dr.Gnanamani , Senior Scientist, Department of Microbiology, CLRI.<br>
-                            During this project, The Collagen was extracted from fish scales. they are quantified and used for apllications in Food Technology.
+                            During this project, The Collagen was extracted from fish scales. they are quantified and used for applications in Food Technology.
                             </p>
                         
                     </div><!-- / carousel-post -->
@@ -275,8 +276,8 @@
 
                     <div class="blog block carousel-post">
                         <h5>Main project</h5>
-                        <p>Faculty Guide: Dr.Antony V Samrot, Asst. Professor, Department of Biotechnology, SIST.
-			The project is about extractio of Biopolymer and its Biomedical and Environmental Applications.</b>
+                        <p>Faculty Guide: Dr.Antony V Samrot, Asst. Professor, Department of Biotechnology, SIST.<br>
+			The project is about extraction of Biopolymer and its Biomedical and Environmental Applications.</b>
                         </p>
                     </div><!-- / carousel-post -->
 
@@ -340,7 +341,7 @@
                                         <i class="lnr lnr-home"></i>
                                     </div>
                                     <h5>Home Address</h5>
-                                    <p>Old No: 2/198, 2nd Block 3rd Street</p>
+                                    <p>Old No: 2/198, 2nd Block 3rd Street, Kannadasan Nagar,Kodungaiyur, Chennai -600 118.</p>
                                 </div><!-- / feature-block -->
                             </div><!-- / col-md-6 feature-left -->
 
